# android_analysis

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/caller/: IXposedClient.aidl  IXposedService.aidl
app/src/main/assets/: jni_methods_info.json  xposed_init
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/byopen/: byopen_android.c  byopen_macho.c
app/src/main/cpp/dlfc/: dlfcn_nougat.cpp  dlfcn_nougat.h
app/src/main/cpp/dobby/: CMakeLists.txt
app/src/main/cpp/dobby/builtin-plugin/BionicLinkerRestriction/: bionic_linker_restriction.cc
app/src/main/cpp/dobby/builtin-plugin/Dyld2HideLibrary/: dyld2_hide_library.cc
app/src/main/cpp/dobby/builtin-plugin/GlobalOffsetTableHook/: CMakeLists.txt
app/src/main/cpp/dobby/builtin-plugin/LinkerImageLoadCallback/: linker_load_callback.cc
app/src/main/cpp/dobby/builtin-plugin/SymbolResolver/elf/: dobby_symbol_resolver.cc
app/src/main/cpp/dobby/include/: dobby.h
app/src/main/cpp/dobby/source/InstructionRelocation/arm/: ARMInstructionRelocation.cc
app/src/main/cpp/dobby/source/InterceptRouting/RoutingPlugin/FunctionInlineReplace/: FunctionInlineReplaceExport.cc
app/src/main/cpp/hook_jni/: enum_jni_static_method.cpp  enum_jni_static_method.h  global_code.cpp  global_code.h  jni_env_hook.cpp  jni_hook.cpp  jni_hook.h  parse_java_sig.cpp  parse_java_sig.h
app/src/main/cpp/hook_libc/: base_hook.cpp  base_hook.h  factory.h  file_hook.cpp  file_hook.h  filter.h  libc_hook_export.h  memory_dir.h  memory_file.h  only_watch.cpp  only_watch.h  other_hook.cpp  other_hook.h
app/src/main/cpp/libxhook/: xh_core.c  xh_jni.c
app/src/main/cpp/route_func/: methods_info.cpp  printf_args_helper.cpp  printf_args_helper.h  printf_java_args.cpp  route_func.cpp  route_func.h
app/src/main/cpp/route_func/asm/: hooking.asm  route_arm.asm
app/src/main/cpp/route_func/asm64/: hooking64.asm  route_arm64.asm
app/src/main/cpp/utils/: java_vm.cpp  java_vm.h  jni_helper.cpp  jni_helper.h  log.cpp  log.h  str_helper.cpp  str_helper.h  utils.cpp  utils.h
app/src/main/java/com/caller/: MainActivity.java  XposedService.java  app_adapter.java  app_info.java
app/src/main/java/com/plug/base/: plug_config.java
app/src/main/java/com/plug/export/: frida_helper.java
app/src/main/java/com/plug/lib/okhttp_finder/: OkCompat.java  OkHttpFinder.java  Utils.java
app/src/main/java/com/plug/xposed/: xposed_sub_plug_loader.java
app/src/main/java/com/plug/xposed/app_sub_plug/: sub_plug_txsd.java
app/src/main/java/com/plug/xposed/base/: sub_plug_base.java  xposed_plug_base.java  xposed_plug_common.java
app/src/main/java/com/plug/xposed/tool/: tool_inject_jar.java  tool_okhttp_analyse.java  tool_pass_root.java  tool_socket_analyse.java  tool_sslunpinning.java
app/src/main/java/com/units/: config.java  log.java  units.java
app/src/main/res/layout/: activity_main.xml  app_list.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
frida/: analyse.js
gradle/wrapper/: gradle-wrapper.properties
